fix anki script

--- a/.github/workflows/docker_anki.yml
+++ b/.github/workflows/docker_anki.yml
@@ -58,9 +58,7 @@ jobs:
           no-cache: true
           build-args:
             - ANKI_VERSION=${{ needs.extract-version.outputs.VERSION }}
-          tags: 
-            - ${{ env.REGISTRY }}/${{ github.repository }}-anki-syncserver:latest
-            - ${{ env.REGISTRY }}/${{ github.repository }}-anki-syncserver:${{ needs.extract-version.outputs.VERSION }}
+          tags: ${{ env.REGISTRY }}/${{ github.repository }}-anki-syncserver:latest,${{ env.REGISTRY }}/${{ github.repository }}-anki-syncserver:${{ needs.extract-version.outputs.VERSION }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
