--- a/.github/workflows/docker_anki.yml
+++ b/.github/workflows/docker_anki.yml
@@ -56,10 +56,10 @@ jobs:
           context: .
           file: docs/syncserver/Dockerfile
           no-cache: true
-          build-args:
-            - ANKI_VERSION=${{ needs.extract-version.outputs.VERSION }}
-          tags: 
-            - "${{ env.REGISTRY }}/${{ github.repository }}-anki-syncserver:latest"
-            - "${{ env.REGISTRY }}/${{ github.repository }}-anki-syncserver:${{ needs.extract-version.outputs.VERSION }}"
+          build-args: |
+            ANKI_VERSION=${{ needs.extract-version.outputs.VERSION }}
+          tags:
+            - ${{ env.REGISTRY }}/${{ github.repository }}-anki-syncserver:latest
+            - ${{ env.REGISTRY }}/${{ github.repository }}-anki-syncserver:${{ needs.extract-version.outputs.VERSION }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
