--- a/.github/workflows/docker_anki.yml
+++ b/.github/workflows/docker_anki.yml
@@ -59,7 +59,7 @@ jobs:
           build-args: |
             ANKI_VERSION=${{ needs.extract-version.outputs.VERSION }}
           tags: |
-            ${{ env.REGISTRY }}/kolbyml/docker_images-anki-syncserver:latest
-            ${{ env.REGISTRY }}/kolbyml/docker_images-anki-syncserver:${{ needs.extract-version.outputs.VERSION }}
+            ${{ env.REGISTRY }}/${{ toLower(github.repository) }}-anki-syncserver:latest
+            ${{ env.REGISTRY }}/${{ toLower(github.repository) }}-anki-syncserver:${{ needs.extract-version.outputs.VERSION }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
