--- a/.github/workflows/docker_anki.yml
+++ b/.github/workflows/docker_anki.yml
@@ -58,8 +58,6 @@ jobs:
           no-cache: true
           build-args: |
             ANKI_VERSION=${{ needs.extract-version.outputs.VERSION }}
-          tags: |
-            ${{ env.REGISTRY }}/kolbyml/docker_images-anki-syncserver:latest
-            ${{ env.REGISTRY }}/kolbyml/docker_images-anki-syncserver:${{ needs.extract-version.outputs.VERSION }}
+          tags: ${{ env.REGISTRY }}/kolbyml/docker_images-anki-syncserver:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
