--- a/.github/workflows/docker_anki.yml
+++ b/.github/workflows/docker_anki.yml
@@ -15,7 +15,7 @@ jobs:
   extract-version:
     name: extract version
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event.workflow_dispatch == 'true' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     steps:
       - name: Extract version
         run: echo "VERSION=$(curl --silent https://api.github.com/repos/ankitects/anki/releases | jq -r 'first | .tag_name')" >> $GITHUB_OUTPUT
